more spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,8 @@ section.board {
   display: grid;
   grid-template-rows: repeat(3, 10vmin);
   grid-template-columns: repeat(3, 10vmin);
-  grid-gap: 2vmin;
+  grid-gap: 1vmin;
   margin: 0 auto;
-  padding: 10px;
 }
 
 div {
